add invitation service and fix some behaviours
